# SymbolicBreeder

./: .gitignore  README.md  vercel.json
backend/: .gitignore  alembic.ini  pyproject.toml  reset_gallery.py  reset_sessions.py
backend/alembic/: env.py
backend/alembic/versions/: 20260312_0001_initial_schema.py  20260316_0002_shared_programs.py  20260318_0003_add_context_profile.py
backend/app/: config.py  database.py  main.py
backend/app/models/: db.py  schemas.py
backend/app/routers/: evolve.py  gallery.py  providers.py  sessions.py
backend/app/services/: context.py  evolution.py  llm.py  mock_data.py
backend/app/services/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  qwen_provider.py  registry.py
backend/context/openscad/: manifest.yaml
backend/context/openscad/advanced/: 30_surfaces_and_polyhedra.md  31_generative_and_optimization.md
backend/context/openscad/prompts/: prompt_bundle.yaml
backend/context/openscad/shared/: 00_runtime_contract.md
backend/context/openscad/simple/: 10_primitives_and_transforms.md  11_booleans_and_composition.md
backend/context/openscad/strategies/: 90_openscad_evolution_playbook.md
backend/context/shader/: manifest.yaml
backend/context/shader/advanced/: 30_raymarching_volumetrics_and_procedural_pbr.md  31_feedback_simulation_and_robustness.md
backend/context/shader/examples/: buffer_examples.md  (+2 more)
backend/context/strudel/: manifest.yaml
backend/context/svg/: manifest.yaml
backend/scripts/: estimate_tokens.py
backend/seeds/: starter_prompts.py
(+89 files in other folders)
